# tools_code

./: calAP.py  kalman.cpp  least_squares.cpp  main_bk.c  quicksort.c  readme.md  rename.py
MachineLearning/C1_KNN/code_KNN/: SimpleKNN.py  intactKNN.py
MachineLearning/C1_KNN/sklearn_KNN/: identify_numbers.py
MachineLearning/C2_C3_DecisionTree/: constructDecisionTree.py  showDecisionTree.py  simpleDecisionTree.py  sklearn_decisionTree.py
MachineLearning/C4_C5_NaiveBayes/: FilteringSpam.py  LaplaceSmoothing.py  Sklearn-SinaNewsClassify.py  codeNaiveBayes.py
MachineLearning/C6_LogisticRegression_GradientRise/: GradientAscent.py
MachineLearning/Machine-Learning-master/Logistic/: LogRegres-gj.py  LogRegres.py
MachineLearning/Machine-Learning-master/kNN/3.数字识别/: kNN_test03.py
MachineLearning/MachineLearning/AdaBoost/: ROC.py
MachineLearning/MachineLearning/DecisionTree/: DecisionTree.py
MachineLearning/MachineLearning/Logistic/: colicLogRegres.py
MachineLearning/MachineLearning/SVM/: svm-simple.py
MachineLearning/MachineLearning/kNN/3.数字识别/: kNN_test03.py
pcl/: CMakeLists.txt  pcl_test.cpp
pytools/: changebackgroundpic.py  resizepic.py  testreptile.py
script/: img2html.py  parsebin.py  yolo_res.py
script/cocodataprocess/: coco2xml_val.py  generate_coco.py  xml2coco.py
script/modelchange/: change_model.py  change_ttfnetmodel.py  model  params
svm/: README.md  svm.py  test_set.txt
